[gd_scene load_steps=26 format=3 uid="uid://dptt37oqe2nhi"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_ilyqu"]
[ext_resource type="Theme" uid="uid://dqyfggoaaux27" path="res://default_theme.tres" id="1_vpm3y"]
[ext_resource type="Environment" uid="uid://biktyphh4dxgd" path="res://default_environment.tres" id="2_4hiq7"]
[ext_resource type="PackedScene" uid="uid://dmb4kv1gi4gh6" path="res://scenes/crate-preview.tscn" id="3_pkhyh"]
[ext_resource type="Texture2D" uid="uid://bg2icjejk8fq0" path="res://textures/icon_medal_bronze.png" id="5_4x2ek"]
[ext_resource type="AudioStream" uid="uid://bq6oeaxy8ng8y" path="res://audio/ui_score_1.wav" id="5_f80t4"]
[ext_resource type="AudioStream" uid="uid://cxinxd75lourv" path="res://audio/ui_score_2.wav" id="6_45mft"]
[ext_resource type="Texture2D" uid="uid://bpcnh36f7kxl4" path="res://textures/icon_medal_silver.png" id="6_a3jix"]
[ext_resource type="Texture2D" uid="uid://c64rrh1t5jjxl" path="res://textures/icon_medal_gold.png" id="7_omekq"]
[ext_resource type="AudioStream" uid="uid://3ky8y3tabjpc" path="res://audio/ui_score_3.wav" id="7_w6ss6"]
[ext_resource type="AudioStream" uid="uid://ckwu0s3gp0gi0" path="res://audio/ui_time_low.mp3" id="11_si0eb"]
[ext_resource type="Texture2D" uid="uid://bnnigwxg33g66" path="res://textures/ui_hamburger_button_normal.png" id="12_n7lxe"]
[ext_resource type="Texture2D" uid="uid://ikg0e453cmam" path="res://textures/ui_hamburger_button_pressed.png" id="13_iodih"]
[ext_resource type="Texture2D" uid="uid://dd1ofibc2u6gu" path="res://textures/ui_hamburger_button_hovered.png" id="14_1a8mv"]

[sub_resource type="Gradient" id="Gradient_hsmrh"]
offsets = PackedFloat32Array(0.440104, 0.463542, 0.638021, 0.666667)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_30geq"]
gradient = SubResource("Gradient_hsmrh")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
repeat = 2

[sub_resource type="Gradient" id="Gradient_ld4ng"]
offsets = PackedFloat32Array(0, 0.457071, 1)
colors = PackedColorArray(0, 0, 0, 0.733333, 0, 0, 0, 0.733333, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wkc6g"]
gradient = SubResource("Gradient_ld4ng")

[sub_resource type="CameraAttributesPhysical" id="CameraAttributesPhysical_6eeyx"]

[sub_resource type="World3D" id="World3D_u87as"]
environment = ExtResource("2_4hiq7")
camera_attributes = SubResource("CameraAttributesPhysical_6eeyx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hxbu"]
bg_color = Color(0, 0, 0, 0.454902)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Gradient" id="Gradient_vymny"]
offsets = PackedFloat32Array(0, 0.457071, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.733333, 0, 0, 0, 0.733333)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h8vtg"]
gradient = SubResource("Gradient_vymny")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8tu5a"]
bg_color = Color(0, 0, 0, 0.329412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0o35c"]
bg_color = Color(0.117647, 0.121569, 0.141176, 0.733333)

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_vpm3y")
script = ExtResource("1_ilyqu")

[node name="CursorAttachments" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DiscardProgress" type="TextureProgressBar" parent="CursorAttachments"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 52.0
offset_bottom = 52.0
fill_mode = 4
texture_progress = SubResource("GradientTexture2D_30geq")

[node name="Score" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 274.0
grow_vertical = 0
mouse_filter = 2
texture = SubResource("GradientTexture2D_wkc6g")

[node name="Label" type="RichTextLabel" parent="Score"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 157.0
offset_bottom = 48.0
mouse_filter = 2
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b]Total score:[/b]"

[node name="Points" type="RichTextLabel" parent="Score"]
layout_mode = 0
offset_left = 167.0
offset_top = 14.0
offset_right = 309.0
offset_bottom = 48.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.152941, 0.584314, 0.92549, 1)
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "100"

[node name="NextCratePreview" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -127.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 149.0
grow_horizontal = 0
mouse_filter = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="NextCratePreview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="NextCratePreview/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_u87as")
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(64, 64)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="Scene" parent="NextCratePreview/SubViewportContainer/SubViewport" instance=ExtResource("3_pkhyh")]

[node name="Overlay" type="Panel" parent="NextCratePreview"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -30.5
offset_right = 36.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7hxbu")

[node name="ProgressBar" type="ProgressBar" parent="NextCratePreview"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.5
offset_top = -18.0
offset_right = 36.5
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="NextCratePreview"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.5
offset_top = 5.0
offset_right = 41.5
offset_bottom = 29.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 16
text = "Next crate"
fit_content = true
autowrap_mode = 0

[node name="TimeLeft" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -274.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
texture = SubResource("GradientTexture2D_h8vtg")

[node name="Label" type="RichTextLabel" parent="TimeLeft"]
layout_mode = 0
offset_left = 15.0
offset_top = 14.0
offset_right = 157.0
offset_bottom = 48.0
mouse_filter = 2
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b]Time left:[/b]"

[node name="Time" type="RichTextLabel" parent="TimeLeft"]
layout_mode = 0
offset_left = 167.0
offset_top = 14.0
offset_right = 251.0
offset_bottom = 48.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0.713726, 0.643137, 1)
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "00:00"

[node name="CountdownOverlay" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CountdownOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -44.0
offset_right = 47.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/bold_font_size = 64
bbcode_enabled = true
text = "[b]3...[/b]"
fit_content = true
autowrap_mode = 0

[node name="LevelEndOverlay" type="Panel" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8tu5a")

[node name="Panel" type="Panel" parent="LevelEndOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -191.0
offset_right = 258.0
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0o35c")

[node name="RichTextLabel" type="RichTextLabel" parent="LevelEndOverlay/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_top = 16.0
offset_right = 69.0
offset_bottom = 56.0
grow_horizontal = 2
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "[b]Time's up![/b]"
fit_content = true
autowrap_mode = 0

[node name="ButtonExit" type="Button" parent="LevelEndOverlay/Panel" groups=["button"]]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -55.0
offset_right = 166.0
offset_bottom = -16.0
grow_vertical = 0
text = "Exit to menu"

[node name="ButtonTryAgain" type="Button" parent="LevelEndOverlay/Panel" groups=["button"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -55.0
offset_right = 75.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "Try again"

[node name="ButtonContinue" type="Button" parent="LevelEndOverlay/Panel" groups=["button"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -55.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Next level"

[node name="Scores" type="Control" parent="LevelEndOverlay/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 42.0
offset_top = -122.0
offset_right = 248.0
offset_bottom = 122.0
grow_vertical = 2

[node name="IconGold" type="TextureRect" parent="LevelEndOverlay/Panel/Scores"]
texture_filter = 1
layout_mode = 0
offset_top = 143.0
offset_right = 32.0
offset_bottom = 175.0
texture = ExtResource("7_omekq")
expand_mode = 1

[node name="IconSilver" type="TextureRect" parent="LevelEndOverlay/Panel/Scores"]
texture_filter = 1
layout_mode = 0
offset_top = 95.0
offset_right = 32.0
offset_bottom = 127.0
texture = ExtResource("6_a3jix")
expand_mode = 1

[node name="IconBronze" type="TextureRect" parent="LevelEndOverlay/Panel/Scores"]
texture_filter = 1
layout_mode = 0
offset_top = 47.0
offset_right = 32.0
offset_bottom = 79.0
texture = ExtResource("5_4x2ek")
expand_mode = 1

[node name="Label" type="Label" parent="LevelEndOverlay/Panel/Scores"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 21.0
text = "Target scores"

[node name="Gold" type="Label" parent="LevelEndOverlay/Panel/Scores"]
layout_mode = 0
offset_left = 45.0
offset_top = 150.0
offset_right = 85.0
offset_bottom = 174.0
text = "0"

[node name="Silver" type="Label" parent="LevelEndOverlay/Panel/Scores"]
layout_mode = 0
offset_left = 45.0
offset_top = 103.0
offset_right = 85.0
offset_bottom = 127.0
text = "0"

[node name="Bronze" type="Label" parent="LevelEndOverlay/Panel/Scores"]
layout_mode = 0
offset_left = 45.0
offset_top = 55.0
offset_right = 85.0
offset_bottom = 79.0
text = "0"

[node name="YourScore" type="Label" parent="LevelEndOverlay/Panel/Scores"]
layout_mode = 0
offset_top = 200.0
offset_right = 93.0
offset_bottom = 224.0
text = "Your score: "

[node name="YourScoreValue" type="Label" parent="LevelEndOverlay/Panel/Scores"]
layout_mode = 0
offset_left = 96.0
offset_top = 200.0
offset_right = 189.0
offset_bottom = 224.0
text = "0"

[node name="Stats" type="Control" parent="LevelEndOverlay/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -121.0
offset_right = -40.0
offset_bottom = 121.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="LevelEndOverlay/Panel/Stats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_bottom = 24.0
grow_horizontal = 0
text = "Stats"
horizontal_alignment = 2

[node name="ScorePopups" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreSounds" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Score1" type="AudioStreamPlayer" parent="ScoreSounds"]
stream = ExtResource("5_f80t4")

[node name="Score2" type="AudioStreamPlayer" parent="ScoreSounds"]
stream = ExtResource("6_45mft")

[node name="Score3" type="AudioStreamPlayer" parent="ScoreSounds"]
stream = ExtResource("7_w6ss6")

[node name="TimeLowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_si0eb")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 48.0
texture_normal = ExtResource("12_n7lxe")
texture_pressed = ExtResource("13_iodih")
texture_hover = ExtResource("14_1a8mv")

[connection signal="pressed" from="LevelEndOverlay/Panel/ButtonExit" to="." method="on_button_exit_pressed"]
[connection signal="pressed" from="LevelEndOverlay/Panel/ButtonTryAgain" to="." method="on_button_try_again_pressed"]
[connection signal="pressed" from="LevelEndOverlay/Panel/ButtonContinue" to="." method="on_button_continue_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="on_hamburger_button_pressed"]
